--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Eduardo Fontenele</h1>
         <p><em>Aerospace Engineering Student and Vice President at <strong><a href="https://www.instagram.com/itarobio/">ITA ROBIO</a></strong></em></p>
-        <p>I am an Web Developer. I love 🖤coffee🖤 and brew my own beers.</p>
+        <p>I am an Web Developer. I love 🖤coffee🖤.</p>
       </td>
     </tr>
   </table>
